--- a/convert_project/templates/index.html
+++ b/convert_project/templates/index.html
@@ -25,17 +25,19 @@
     
     <main>
         <div class="main-app">
-            <select name="files" id="">
-                <option value="pdf">PDF</option>
-                <option value="world">Word</option>
-                <option value="exel">Exel</option>
-            </select>
-            <button>CONVERTIR A</button>
-            <select name="files" id="">
-                <option value="pdf">PDF</option>
-                <option value="world">Word</option>
-                <option value="exel">Exel</option>
-            </select>
+            <div class="convert-section">
+                <select name="files" id="">
+                    <option value="pdf">PDF</option>
+                    <option value="world">Word</option>
+                    <option value="exel">Exel</option>
+                </select>
+                <button>CONVERTIR A</button>
+                <select name="files" id="">
+                    <option value="pdf">PDF</option>
+                    <option value="world">Word</option>
+                    <option value="exel">Exel</option>
+                </select>
+            </div>
         </div>
 
         <footer>
