--- a/convert_project/static/css/index.css
+++ b/convert_project/static/css/index.css
@@ -44,3 +44,10 @@ a:hover {
 .main-app{
     height: 1200px;
 }
+
+.convert-section{
+    margin-top: 15%;
+    border: 5px solid #FFFF00;
+    text-align: center;
+    height: 200px;
+}
