--- a/convert_project/templates/index.html
+++ b/convert_project/templates/index.html
@@ -37,6 +37,18 @@
                     <option value="world">Word</option>
                     <option value="exel">Exel</option>
                 </select>
+                <div class="drop-select">
+                    <div id="upload-area" class="form">
+                        <div class="upload-ui">
+                          <img src="ic_upload.svg" alt="">
+                          <h2>Drag & Drop Files<br>to Upload</h2>
+                          <p>or</p>
+                          <input id="input-upload" class="input-upload" type="file" name="file" multiple>
+                          <button id="btn-upload" class="btn-upload">Select Files</button>
+                          <div id="file-name" class="file-name"></div>
+                        </div>
+                      </div>
+                </div>
             </div>
         </div>
 
@@ -44,6 +56,6 @@
             <h3>Hecho con el ♥ por Reyner B.</h3>
         </footer>
     </main>
-    
+    <script src="../static/js/functions.js"></script>
 </body>
 </html>
